--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <span class="num">2</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: var(--light);">name</span>: <span style="color: #f4bb6c;">"Rayane Maati"</span>, <br>
                     <span class="num">3</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: var(--light);">occupation</span>: <span style="color: #f4bb6c;">"Software Enginnering Student"</span>, <br>
                     <span class="num">4</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: var(--light);">hobby</span>: <span style="color: #f4bb6c;">"Programming"</span>, <br>
-                    <span class="num">5</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: var(--light);">age</span>: <span style="color: #f4bb6c;">"n/a"</span> <br>
+                    <span class="num">5</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: var(--light);">age</span>: <span style="color: #f4bb6c;">"18"</span> <br>
                     <span class="num">6</span>&nbsp;&nbsp;&nbsp;}
             </div>
 
@@ -62,7 +62,7 @@
         <div class="title">return(myProgrammingLanguages[]);</div>
         <div class="cards">
             <div class="card">
-                <div class="langTitle">Python</div>
+                <div class="langTitle" style="color: var(--x-light)">Python</div>
                 <img src="icons/py.svg" class="icon"/>
             </div>
 
@@ -75,6 +75,27 @@
                 <div class="langTitle">JavaScript</div>
                 <img src="icons/js.svg" class="icon"/>
             </div>
+
+            <div class="card">
+                <div class="langTitle">ReactJS</div>
+                <img src="icons/reactjs.svg" class="icon"/>
+            </div>
+
+            <div class="card">
+                <div class="langTitle">HTML</div>
+                <img src="icons/html.svg" class="icon"/>
+            </div>
+
+            <div class="card">
+                <div class="langTitle">CSS</div>
+                <img src="icons/css.svg" class="icon"/>
+            </div>
+
+            <div class="card">
+                <div class="langTitle">PHP</div>
+                <img src="icons/php.svg" class="icon"/>
+            </div>
+
         </div>
     </div>
 
