--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="heroOcc">
-            <p class="occupation">Software Engineering student @ uOttawa</p><span style="font-size: 20px;" class="cursorLine"> | </span>
+            <p class="occupation"></p><span style="font-size: 20px;" class="cursorLine"> | </span>
         </div>
         <a href="#aboutMe"><button class="moreBtn">KNOW ME BETTER !</button></a>
     </div>
@@ -159,7 +159,7 @@
     </div>
 
     <button class="topBtn" onclick="goUp()"><img src="icons/up.svg"/></button>
-    
+
     <footer>Made with love by <span style="color: var(--light); font-weight: 600;">Rayane Maati</span></footer>
    
     <script src="script.js"></script>
