nav button issue fixed!

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button class="navBtn" onclick="window.location.href = '#aboutMe';">Who I Am ?</button>
         <button class="navBtn" onclick="window.location.href = '#myProgLanguages';">My Skills</button>
         <button class="navBtn" onclick="window.location.href = '#myProjects';">My Projects</button>
-        <button class="navBtn" onclick="window.location.href = '#myProjects';">Contact Me !</button>
+        <button class="navBtn" onclick="window.location.href = '#mySocials';">Contact Me !</button>
     </div>
 
     <div class="skillsCard aboutMe" id="aboutMe">
