--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="title">Let's Make great things together!</div>
         <div class="socials">
             <div class="socialItem">
-                <img src="icons/cv.svg" alt="resume" onclick="window.open('cv.pdf')">
+                <img src="icons/cv.svg" alt="resume" onclick="window.open('rayane_maati_cv.pdf')">
                 <div>Resume</div>
             </div>
 
